--- a/.github/workflows/build-kernel_use-Google-git.yml
+++ b/.github/workflows/build-kernel_use-Google-git.yml
@@ -139,6 +139,21 @@ jobs:
         cd $GITHUB_WORKSPACE/kernel_workspace/android-kernel
         rm -rf utils
         git clone https://github.com/tomxi1997/lxc-docker-support-for-android.git utils
+
+        # 【新增】移除 LXC 补丁中强制选中 CFS_BANDWIDTH 和 DOCKER_STATISTICS 的越权语句
+        sed -i '/select CFS_BANDWIDTH/d' utils/Kconfig
+        sed -i '/select DOCKER_STATISTICS/d' utils/Kconfig
+        
+        echo 'source "utils/Kconfig"' >> "Kconfig"
+
+        echo "CONFIG_DOCKER=y" >> arch/${{ env.ARCH }}/configs/${{ env.KERNEL_CONFIG }}
+        
+        # 【新增】在 defconfig 尾部显式禁用这些会引发代码冲突的调度器特性
+        echo "# CONFIG_CFS_BANDWIDTH is not set" >> arch/${{ env.ARCH }}/configs/${{ env.KERNEL_CONFIG }}
+        echo "# CONFIG_DOCKER_STATISTICS is not set" >> arch/${{ env.ARCH }}/configs/${{ env.KERNEL_CONFIG }}
+
+        sed -i '/CONFIG_ANDROID_PARANOID_NETWORK/d' arch/${{ env.ARCH }}/configs/${{ env.KERNEL_CONFIG }}
+        echo "# CONFIG_ANDROID_PARANOID_NETWORK is not set" >> arch/${{ env.ARCH }}/configs/${{ env.KERNEL_CONFIG }}
         echo 'source "utils/Kconfig"' >> "Kconfig"
 
         echo "CONFIG_DOCKER=y" >> arch/${{ env.ARCH }}/configs/${{ env.KERNEL_CONFIG }}
